[tool.poetry]
name = "playwright-python-pytest-async"
version = "0.1.0"
description = ""
authors = ["Daisuke Kobayashi <daisuke@daisukekobayashi.com>"]
readme = "README.md"
packages = [{include = "playwright_python_pytest_async"}]

[tool.poetry.dependencies]
python = "^3.9"
playwright = "^1.30.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
pytest-asyncio = "^0.20.3"
black = "^23.1.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
mypy = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line_length = 79
include = '\.pyi?$'
exclude = '''
(
    .git
  | .mypy_cache
  | .pytest_cache
  | .tox
  | .venv
  | dist
)
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 79
